...
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/game_button_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/game_button_height"
                android:layout_marginEnd="@dimen/game_button_margin"
                android:layout_weight="1"
                android:background="@drawable/button_fancy_blue"
                android:padding="@dimen/game_button_padding"
...
                android:textStyle="bold"
                android:elevation="6dp" />
        </LinearLayout>
        
        <!-- Next Level button (initially invisible) -->
        <Button
            android:id="@+id/next_level_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/game_button_height"
            android:layout_marginTop="@dimen/game_button_margin"
            android:background="@drawable/button_fancy_green"
            android:padding="@dimen/game_button_padding"
            android:text="@string/next_level"
...
